# Mara

./: .gitignore  .gitmodules  LICENSE  Mara.sln  README.md
.github/workflows/: Linux.yml  Mara.Generator.yml  Mara.Lib.yml  Mara.PS3.Decryptor.yml  Windows.yml
Mara.Generator/: FileSelectorForm.Designer.cs  FileSelectorForm.cs  Form1.Designer.cs  Form1.cs  Form1.resx  FormInfo.Designer.cs  FormInfo.cs  Mara - Backup.Generator.csproj  Mara.Generator.csproj  PatchGenerator.cs  PatcherForm.Designer.cs  PatcherForm.cs  Program.cs
Mara.Generator/Properties/: Resources.Designer.cs  Resources.resx
Mara.Installer/: Program.cs
Mara.Lib/: Mara.Lib.csproj  MaraConfig.cs  PatchInfo.cs
Mara.Lib.Tests/: Mara.Lib.Tests.csproj  OWOTest.cs  Resource_test.Designer.cs  Resource_test.resx  Usings.cs
Mara.Lib.Tests/Resources/: output.owo
Mara.Lib/Common/: Git.cs  Internet.cs  Lzma.cs  Md5.cs  Open.cs  SplitFile.cs  Steam.cs  Xdelta.cs
Mara.Lib/Common/IO/: UWU.cs  Utils.cs
Mara.Lib/Common/Steam/: SteamUtils.cs
Mara.Lib/Configs/: GuiConfig.cs  PatchFilesInfo.cs  PatchInfo.cs
Mara.Lib/Dll/: Pleosoft.XdeltaSharp.deps.json  Pleosoft.XdeltaSharp.xml
Mara.PS3.Decryptor/: Mara.PS3.Decryptor.csproj  Program.cs
Mara.Patcher/: Mara.Patcher.csproj  Program.cs  Startup.cs  electron.manifest.json
Mara.Patcher.Switch/: .gitignore  CMakeLists.txt  DevkitA64Libnx.cmake  Makefile  Mara.Patcher.Switch.vcxproj  Mara.Patcher.Switch.vcxproj.filters
Mara.Patcher.Switch/borealis/: .gitrepo
Mara.Patcher.Switch/borealis/demo/: pokemon_view.cpp
Mara.Patcher.Switch/cmake/: SwitchTools.cmake
Mara.Patcher.Switch/include/: Helper.h  types.h
Mara.Patcher.Switch/include/Program/: Main.hpp
Mara.Patcher.Switch/include/ns/: ns.hpp  title.hpp
Mara.Patcher.Switch/include/ui/: MainActivity.hpp
Mara.Patcher.Switch/include/ui/elements/: ProgramidListItem.hpp
Mara.Patcher.Switch/resources/i18n/en-US/: Program.xml  main.json
Mara.Patcher.Switch/resources/i18n/es/: brls.json  main.json
Mara.Patcher.Switch/resources/xml/activity/: main.xml
Mara.Patcher.Switch/resources/xml/tabs/: components.xml  layout.xml  recycling_list.xml
Mara.Patcher.Switch/resources/xml/views/: captioned_image.xml
Mara.Patcher.Switch/source/Program/: Main.cpp  MainActivity.cpp  MainActivity.hpp
Mara.Patcher.Switch/source/ns/: ns.cpp  title.cpp
Mara.Patcher.Switch/source/ui/: MainActivity.cpp
Mara.Patcher/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Mara.Patcher/Pages/Shared/: _Layout.cshtml
Mara.Patcher/Properties/: launchSettings.json
Mara.Tester/: Mara.Tester.csproj  Program.cs
Mara.Tester/Properties/: launchSettings.json
Unity.Mara.Lib/: .gitignore  package.json
Unity.Mara.Lib/Assets/: README.md  package.json
Unity.Mara.Lib/Assets/Mara.Lib/: Unity.Mara.Lib.Editor.asmdef
Unity.Mara.Lib/Assets/Samples/: MaraUnityManager.cs  SampleScene.unity
Unity.Mara.Lib/Mara.Lib/: Unity.Mara.Lib.asmdef
Unity.Mara.Lib/Mara.Lib/Runtime/: MaraConfig.cs
Unity.Mara.Lib/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  RiderScriptEditorPersistedState.asset
Unity.Mara.Lib/Runtime/Mara.Lib/: Unity.Mara.Lib.asmdef
Unity.Mara.Lib/Samples/: MaraUnityManager.cs
(+58 files in other folders)
